Bug 449786 - Total "Resource assignments" are wrong if the resources have different calendars and availability
Summary: Total "Resource assignments" are wrong if the resources have different calend...
Status: RESOLVED FIXED
Alias: None
Product: calligraplan
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.3.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dag Andersen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-02-08 14:29 UTC by cquike
Modified: 2022-02-16 12:40 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.3.89
Sentry Crash Report:


Attachments
Resources (20.14 KB, image/png)
2022-02-08 14:29 UTC, cquike
Details
Calendars (10.70 KB, image/png)
2022-02-08 14:29 UTC, cquike
Details
Task (80 hours) (5.56 KB, image/png)
2022-02-08 14:30 UTC, cquike
Details
Wrong Total hours (7.12 KB, image/png)
2022-02-08 14:30 UTC, cquike
Details
project plan (15.69 KB, application/x-vnd.kde.plan)
2022-02-09 20:51 UTC, cquike
Details

Note You need to log in before you can comment on or make changes to this bug.
Description cquike 2022-02-08 14:29:12 UTC
Created attachment 146439 [details]
Resources

SUMMARY

I have came across a weird error in the Total hours field of the  "Resource assignments". If a task is assigned to two different resources which happen to have different calendars and different total availability then the sum of the total hours is more than the hours of the task.

For instance: Resource 1 has 30% availability and calendar Base while Resource 2 has 50% availability and calendar Other.
It seems also that the properties of the calendar matter. In my case calendar Base has assigned 7 hours of work each day, timezone is Europe/Berlin and Holiday region Germany/Bavaria. Calendar Other has 8 hours assigned to each data, timezone is Australia/Brisbane and holiday region is Australia/New South Gales. 

In the screenshots attached you can see a summary of the setup.

Under those circumstances, a task which has 80 hours estimated seems to have 29.4 assigned to the first resource and 51.1 to the second, which makes it a total of 80.5

Interestingly, if both resources have the same calendar (no matter whether it is the 7 or 8 hours a day) the total sum is correct. Also if both resources have 100% availability.

STEPS TO REPRODUCE
1. Create two calendars with different working hours, timezone and holiday region
2.  Create two resources and assign one calendar to each
3.  Create a task
4.  Run a Schedule
5. Go to the "Resource Assignment" view.  

OBSERVED RESULT
The sum of the hours for  both resources is more than the estimate for the task

EXPECTED RESULT
The sum of the hours for  both resources is the same as the estimate for the task


SOFTWARE/OS VERSIONS
Linux:  Fedora 35
KDE Plasma Version: 5.23.4
KDE Frameworks Version: 5.89.0
Qt Version: 5.15
Calligra plan: 3.3.0

ADDITIONAL INFORMATION
All software installed from F35 official RPM repositories.
Comment 1 cquike 2022-02-08 14:29:39 UTC
Created attachment 146440 [details]
Calendars
Comment 2 cquike 2022-02-08 14:30:07 UTC
Created attachment 146441 [details]
Task (80 hours)
Comment 3 cquike 2022-02-08 14:30:45 UTC
Created attachment 146442 [details]
Wrong Total hours
Comment 4 Dag Andersen 2022-02-09 09:00:03 UTC
Confirm that total hours is not updated in "Resource assignments", probably changes are not picked up correctly by the view.

I cannot reproduce  the problem with wrong total here. I get 29.6 for resource 1 and 50.4 for resource 2.
I see there is a 1 minute granularity in the calculations, but shouldn't be a problem in this case. (Probably should be adjustable though.)
I assume you are in Germany? Can't see how that could cause this, but...

Could you attach your project file?

Could you try:
1) Reschedule and check the log for any problems.
2) Use the TJ Scheduler: Create a new schedule, select TJ Scheduler, calculate. Check the log to see if there are any problems.
Comment 5 cquike 2022-02-09 20:50:47 UTC
Hi,
I have checked the scheduling logs and there are only Info messages, both with the Network Scheduler and the TJ Scheduler.

I attach here my project file, hopefully you can reproduce the error that way.
Comment 6 cquike 2022-02-09 20:51:16 UTC
Created attachment 146505 [details]
project plan
Comment 7 Dag Andersen 2022-02-15 11:09:26 UTC
Git commit 94492140a8516065e16844093d283dca45b4a728 by Dag Andersen.
Committed on 15/02/2022 at 11:05.
Pushed by danders into branch 'master'.

Fix scheduling problem when resource timezone makes work hours span midnite

Fixes following problems:
1) Resource assignments view not refreshed when current schedule is rescheduled.
2) Total resource effert odes not match estimated effort,
   due to incorrect timezone handling.
3) The part of the work interval before midnite not used due to incorrect sorting of work intervals.
FIXED-IN: 3.3.89

M  +21   -20   src/libs/kernel/Resource.cpp
M  +7    -2    src/libs/kernel/kptappointment.cpp
M  +83   -1    src/libs/kernel/tests/ProjectTester.cpp
M  +2    -1    src/libs/kernel/tests/ProjectTester.h
M  +4    -1    src/libs/models/kptresourceappointmentsmodel.cpp

https://invent.kde.org/office/calligraplan/commit/94492140a8516065e16844093d283dca45b4a728
Comment 8 cquike 2022-02-15 12:44:02 UTC
That's nice that it has been fixed!
 Is there a way to test this using some package? Or source compilation is currently the only option?
Thanks!
Comment 9 Dag Andersen 2022-02-15 13:06:10 UTC
(In reply to cquike from comment #8)
> That's nice that it has been fixed!
>  Is there a way to test this using some package? Or source compilation is
> currently the only option?
Source is only option unless you run neon developer edition.
> Thanks!
Comment 10 cquike 2022-02-15 13:36:28 UTC
I have managed to run it from source and indeed the bugs have been fixed! Thanks!
Comment 11 cquike 2022-02-15 13:54:21 UTC
Well, maybe I see something weird, but I don't know whether this is due to my source build or not: it looks like now it is possible to assign a resource to several resource groups. I guess that is a new feature. However I see two issues:
1. I see no way to a new resource group.
2. In the "Resource Assignments" view now only the resources are shown, not the resource groups. Admittedly, even in current version, the total for a resource group wasn't shown, but at least you had together all the resources belonging to the same resource group. This is quite useful if there are quite a number of resources grouped in a couple of resource groups (for instance developers and testers) and one wants to see how many hours will be spent for each of the groups. If the total would also be shown for the resource groups that would be even better :)
Comment 12 Dag Andersen 2022-02-16 12:40:47 UTC
Yes, new functionality. Resource groups are now optional and it is possible to assign resource to multiple groups.
They can thus be used for both skills based and organizational groups.

The resource group editor is not shown when you open a project created with earlier versions (should probably handle that).
You can add it by open context menu in view selector and insert it.

The resource assignment view needs a redesign anyways, it is very cpu hungry even with moderately large projects.
I suspect qt but I haven't looked into it yet.