Fix scheduling problem when resource timezone makes work hours span midnite

Fixes following problems:
1) Resource assignments view not refreshed when current schedule is rescheduled.
2) Total resource effert odes not match estimated effort,
   due to incorrect timezone handling.
3) The part of the work interval before midnite not used due to incorrect sorting of work intervals.

BUG: 449786
FIXED-IN: 3.3.89